Fix navbar on small screens

--- a/masdap/static/less/masdap.less
+++ b/masdap/static/less/masdap.less
@@ -1125,6 +1125,22 @@ nav.filter {
     .collapsing {
         overflow: hidden!important;
     }
+	.home .navbar-inverse {
+		background-color: @gray-dark;
+	}
+	.navbar-inverse {
+		.navbar-nav>li>a {
+			padding-bottom: 0.75em;
+			padding-top: 0.75em;
+		}
+		.navbar-nav .search {
+			padding-bottom: 0.75em;
+			top: 0;
+			input {
+				width: 100%;
+			}
+		}
+	}
 }
 
 #member_form_container .select2-container{
